--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.7",
-    "expo-status-bar": "~1.11.1",
+    "@react-native-community/netinfo": "11.3.2",
+    "@react-native/assets-registry": "^0.74.84",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "expo": "^51.0.12",
+    "expo-modules-core": "^1.12.14",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.2",
+    "react-native-safe-area-context": "4.10.4",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.7"
   },
   "private": true
 }
